# fancy_lights

./: CMakeLists.txt  LICENSE  package.xml
launch/: platform_indicator.launch
scripts/: lightPatterns.py  light_controller.py  movement_monitor.py
src/: lightPatterns.py  light_controller.py  movement_monitor.py
