<?xml version="1.0"?>
<package>
  <name>fancy_lights</name>
  <version>0.0.0</version>
  <description>The fancy_lights package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">dniewinski</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ridgeback_msgs</build_depend>
  <build_depend>warthog_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ridgeback_msgs</run_depend>
  <run_depend>warthog_msgs</run_depend>

  <export>

  </export>
</package>
