<?xml version="1.0"?>
<package>
  <name>platform_indicator_lights</name>
  <version>0.0.0</version>
  <description>The platform_indicator_lights package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ridgeback_msgs</run_depend>
  <run_depend>warthog_msgs</run_depend>

  <export>

  </export>
</package>
